--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,8 @@
     "cmake.generator": "Ninja",
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
-        "stdlib.h": "c"
+        "*.embeddedhtml": "html",
+        "stdlib.h": "c",
+        "knx.h": "c"
     }
 }
