--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,29 @@
 cmake_minimum_required(VERSION 3.13)
 
-set(PROGRAM_NAME pico_w_webserver)
+set(PROGRAM_NAME pico_knx2)
 set(PICO_BOARD pico_w)
 
 include(pico_sdk_import.cmake)
 
-project(pico_w_webserver)
+project(pico_knx2)
 
 pico_sdk_init()
 
 message("Running makefsdata python script")
 execute_process(COMMAND
-    py makefsdata.py
+    perl makefsdata
     WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
 )
 
 FILE(GLOB drivers_executables drivers/*.c)
 FILE(GLOB app_executables app/*.c)
+FILE(GLOB oled_images oledImages/*.c)
 
 add_executable(${PROGRAM_NAME}
     main.c
     ${drivers_executables}
     ${app_executables}
+    ${oled_images}
 )
 
 target_include_directories(${PROGRAM_NAME} PRIVATE
@@ -35,6 +37,8 @@ target_link_libraries(${PROGRAM_NAME}
     pico_stdlib
     hardware_adc
     hardware_i2c
+    hardware_timer
+    hardware_gpio
 )
 
 pico_enable_stdio_usb(${PROGRAM_NAME} TRUE)
